Add: base styles

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <div class="app">
         <div class="screen join-screen active">
             <div class="form">
-                <h2>Shrae your files securely</h2>
+                <h2>Share your files securely</h2>
                 <div class="form-input">
                     <button id="sender-start-con-btn">Create Room</button>
                 </div>
