--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="app">
-        <div class="screen join-screen active">
+        <div class="screen join-screen">
             <div class="form">
                 <h2>Share your files securely</h2>
                 <div class="form-input">
@@ -23,20 +23,17 @@
                 </div>
             </div>
         </div>
-        <div class="screen fs-screen">
+        <div class="screen fs-screen active">
             <div class="file-input">
                 <label for="file-input">Click here to select files for sharing</label>
                 <input type="file" id="file-input">
             </div>
             <div class="files-list">
                 <div class="title">Shared: files</div>
-                <div class="item">
-                    <div class="progess">0%</div>
-                    <div class="filename">Abc.txt</div>
-                </div>
             </div>
         </div>
     </div>
+
 
     <script type="text/javascript" src="socket.io/socket.io.js"></script>
     <script type="text/javascript" src="code.js"></script>
