--- a/public/index.html
+++ b/public/index.html
@@ -11,19 +11,18 @@
 
 <body>
     <div class="app">
-        <div class="screen join-screen">
+        <div class="screen join-screen active">
             <div class="form">
                 <h2>Share your files securely</h2>
                 <div class="form-input">
                     <button id="sender-start-con-btn">Create Room</button>
                 </div>
                 <div class="form-input" id="join-id">
-                    <b>Room ID</b>
-                    <span>000-000-000</span>
+
                 </div>
             </div>
         </div>
-        <div class="screen fs-screen active">
+        <div class="screen fs-screen">
             <div class="file-input">
                 <label for="file-input">Click here to select files for sharing</label>
                 <input type="file" id="file-input">
