--- a/public/receiver.html
+++ b/public/receiver.html
@@ -14,7 +14,7 @@
         <div class="screen join-screen active">
             <div class="form">
                 <h2>Share your files securely</h2>
-                <div class="form-input" id="join-id">
+                <div class="form-input">
                     <label for="join-id">Join ID</b>
                         <input type="text" id="join-id">
                 </div>
@@ -24,7 +24,7 @@
             </div>
         </div>
         <div class="screen fs-screen">
-            
+
             <div class="files-list">
                 <div class="title">Shared: files</div>
             </div>
@@ -35,7 +35,7 @@
         integrity="sha512-WiGQZv8WpmQVRUFXZywo7pHIO0G/o3RyiAJZj8YXNN4AV7ReR1RYWVmZJ6y3H06blPcjJmG/sBpOVZjTSFFlzQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script type="text/javascript" src="socket.io/socket.io.js"></script>
-    <script type="text/javascript" src="code.js"></script>
+    <script type="text/javascript" src="receiver.js"></script>
 </body>
 
 </html>
