--- a/public/receiver.html
+++ b/public/receiver.html
@@ -1,41 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+	<meta charset="utf-8">
+	<title></title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
-
 <body>
-    <div class="app">
-        <div class="screen join-screen active">
-            <div class="form">
-                <h2>Share your files securely</h2>
-                <div class="form-input">
-                    <label for="join-id">Join ID</b>
-                        <input type="text" id="join-id">
-                </div>
-                <div class="form-input">
-                    <button id="receiver-start-con-btn">Connect</button>
-                </div>
-            </div>
-        </div>
-        <div class="screen fs-screen">
-
-            <div class="files-list">
-                <div class="title">Shared: files</div>
-            </div>
-        </div>
-    </div>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/downloadjs/1.4.8/download.min.js"
-        integrity="sha512-WiGQZv8WpmQVRUFXZywo7pHIO0G/o3RyiAJZj8YXNN4AV7ReR1RYWVmZJ6y3H06blPcjJmG/sBpOVZjTSFFlzQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script type="text/javascript" src="socket.io/socket.io.js"></script>
-    <script type="text/javascript" src="receiver.js"></script>
+	<div class="app">
+		<div class="screen join-screen active">
+			<div class="form">
+				<h2>Share your files securely</h2>
+				<div class="form-input">
+					<label>Join ID</label>
+					<input type="text" id="join-id">
+				</div>
+				<div class="form-input">
+					<button id="receiver-start-con-btn">Connect</button>
+				</div>
+			</div>
+		</div>
+		<div class="screen fs-screen">
+			<div class="files-list">
+				<div class="title">Shared files</div>
+			</div>	
+		</div>
+	</div>
+	<script type="text/javascript" src="socket.io/socket.io.js"></script>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/downloadjs/1.4.1/download.min.js"></script>
+	<script type="text/javascript" src="receiver.js"></script>
 </body>
-
 </html>
